blender/resources/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      serviceAccountName: blender-web
      containers:
        - args:
            - ./entrypoint.sh
          name: web
          image: flight-blender
          # imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          securityContext:
            runAsUser: 10000
            runAsGroup: 10000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources: {}
      imagePullSecrets:
        - name: registry-utmtest
