blender/resources/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app: worker
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      version: v1
  template:
    metadata:
      labels:
        app: worker
        version: v1
    spec:
      serviceAccountName: blender-web
      containers:
        - args:
            - "celery"
            - "--app=flight_blender"
            - "worker"
            - "--loglevel=info"
          name: worker
          image: registry.digitalocean.com/utmtest/flight-blender:latest
          # imagePullPolicy: IfNotPresent
          # ports:
          #   - containerPort: 8000
          securityContext:
            runAsUser: 1000
          resources: {}
      imagePullSecrets:
        - name: registry-utmtest
