blender/resources/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    service: web
spec:
  type: NodePort
  ports:
    - port: 8000
      name: http
      targetPort: 8000
  selector:
    app: web
---
