blender/resources/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - blender.pszonka.org
    secretName: polls-tls
  rules:
  - host: blender.pszonka.org
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 8000
